<resources>
    <string name="app_name">MineSelf</string>
    <string name="add_button_text">+</string>
    <string name="cancel_button_text">x</string>
    <string name="delete_button_text">x</string>
    <string name="confirm_button_text">Ok</string>
<!--    <string name="profile_create_name_placeholder">Enter a profile name...</string>-->
    <string name="profile_create_name_placeholder">AlexDemo</string>
    <string name="profile_create_db_settings_header">InfluxDB Settings</string>
    <string name="profile_create_host_label">Host</string>
    <string name="profile_create_org_label">Org</string>
    <string name="profile_create_token_label">Token</string>
    <string name="profile_create_host_placeholder">https://eastus-1.azure.cloud2.influxdata.com</string>
    <string name="profile_create_org_placeholder">95e1d1ad137ece8b</string>
    <string name="profile_create_token_placeholder">lcK8yn0y0h7PM8TPp0Lg4B8biIDOmix9JUfdB0e34cHjw-YGHVyuhvmnM5fv66ftKf9_M4pY5QAy-HDNQ24axw==</string>
    <string name="profile_create_btn_text">Create</string>
    <string name="aspects_header">My Aspects</string>
    <string name="aspects_to_splash_btn">Profiles</string>
    <string name="aspects_new_aspect_name_placeholder">Enter Aspect Name...</string>
    <string name="aspects_new_aspect_value_placeholder">Initial Value</string>
    <string name="aspects_refresh_button_text">Refresh</string>
    <string name="aspect_entry_name_placeholder">[Name]</string>
    <string name="aspect_entry_delta_placeholder">[Delta]</string>
    <string name="aspect_entry_value_placeholder">[Value]</string>
    <string name="aspect_view_no_change_button_text">No Change</string>
    <string name="aspect_view_sm_inc_button_text">+1</string>
    <string name="aspect_view_md_inc_button_text">+10</string>
    <string name="aspect_view_lg_inc_button_text">+100</string>
    <string name="aspect_view_sm_dec_button_text">-1</string>
    <string name="aspect_view_md_dec_button_text">-10</string>
    <string name="aspect_view_lg_dec_button_text">-100</string>
    <string name="aspect_update_tags_label">Tags</string>
    <string name="aspect_update_note_placeholder">Enter a note...</string>
    <string name="aspect_update_new_tag_placeholder">Enter a tag name...</string>
    <string name="aspect_update_value_placeholder">[Updated Value]</string>
    <string name="aspect_update_delta_placeholder">[Delta]</string>
    <string name="tag_entry_key_label_placeholder">[Key]</string>
    <string name="tag_entry_value_placeholder">Value...</string>
</resources>