<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/aspectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mood"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/lastUpdatedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="last updated 2h ago" />

    <TextView
        android:id="@+id/aspectValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="825"
        android:textSize="60sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/noChangeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aspect_view_no_change_button_text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/subSmallBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aspect_view_sm_dec_button_text" />

            <Button
                android:id="@+id/addSmallBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aspect_view_sm_inc_button_text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/subMedBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aspect_view_md_dec_button_text" />

            <Button
                android:id="@+id/addMedBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aspect_view_md_inc_button_text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/subLargeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aspect_view_lg_dec_button_text" />

            <Button
                android:id="@+id/addLargeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aspect_view_lg_inc_button_text" />
        </TableRow>

    </TableLayout>

</LinearLayout>