<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/toProfilesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="toSplash"
            android:text="@string/aspects_to_splash_btn" />

        <TextView
            android:id="@+id/aspectsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aspects_header" />

        <Button
            android:id="@+id/createAspectBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:layout_marginBottom="8dp"
            android:text="@string/add_button_text" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/aspectList"
        android:layout_width="411dp"
        android:layout_height="578dp"
        android:layout_marginTop="24dp" />
</LinearLayout>